Added some comments

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <title>Amazing</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="assets/site-icon/icon.png" />
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
     integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous" />
+  <!-- Bootstrap CSS CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet" />
   <link
     href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Comfortaa:wght@500;700&family=PT+Sans&family=Quicksand:wght@400;600&family=Roboto&family=Roboto+Condensed&display=swap"
@@ -22,8 +25,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Abel&family=Dancing+Script:wght@600;700&display=swap"
     rel="stylesheet" />
+  <!-- Bootstrap Local CSS File -->
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
+  <!-- Main CSS -->
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/index.css" />
+  <!-- Main JS -->
   <script src="assets/js/index.js"></script>
 </head>
 
@@ -334,9 +340,9 @@
 
         <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3">
           <div class="card" id="card-8">
-           <div class="inner">
-            <img id="men" src="assets/img/trouser.jpg" class="card-img-top img-fluid" />
-           </div>
+            <div class="inner">
+              <img id="men" src="assets/img/trouser.jpg" class="card-img-top img-fluid" />
+            </div>
             <div class="card-body">
               <span class="lead" style="font-size: 15px; font-weight: bold;"><b>Men</b></span>
               <br />
