--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
     <div class="container">
       <div class="row mt-3">
         <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-          <div class="card" id="card-1">
+          <div class="card shadow" id="card-1">
             <div class="card-img">
               <img id="transform" src="assets/img/simple.jpg" class="card-img-top img-fluid" />
               <img src="assets/img/simple-2.jpg" class="card-img-top img-fluid transform" />
@@ -392,7 +392,7 @@
         </div>
 
         <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-          <div class="card" id="card-2">
+          <div class="card shadow" id="card-2">
             <div class="card-img">
               <img id="transform-1" src="assets/img/simple-5.jpg" class="card-img-top img-fluid transformed" />
               <img src="assets/img/simple-6.jpg" class="card-img-top img-fluid transform" />
@@ -414,7 +414,7 @@
         </div>
 
         <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-          <div class="card" id="card-3">
+          <div class="card shadow" id="card-3">
             <div class="card-img">
               <img id="transform-2" src="assets/img/simple-11.jpg" class="card-img-top img-fluid transformed" />
               <img src="assets/img/simple-10.jpg" class="card-img-top img-fluid transform" />
@@ -438,7 +438,7 @@
 
       <div class="row mt-4">
         <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-          <div class="card" id="card-4">
+          <div class="card shadow" id="card-4">
             <div class="card-img">
               <img id="transform-3" src="assets/img/sandals.jpg" class="card-img-top img-fluid transformed" />
               <img src="assets/img/sandals-0.jpg" class="card-img-top img-fluid transform" />
@@ -460,7 +460,7 @@
         </div>
 
         <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-          <div class="card" id="card-5">
+          <div class="card shadow" id="card-5">
             <div class="card-img">
               <img id="transform-4" src="assets/img/simple-13.jpg" class="card-img-top img-fluid transformed" />
               <img src="assets/img/simple-14.jpg" class="card-img-top img-fluid transform" />
@@ -482,7 +482,7 @@
         </div>
 
         <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-          <div class="card" id="card-6">
+          <div class="card shadow" id="card-6">
             <div class="card-img">
               <img src="assets/img/simple-12.jpg" class="card-img-top img-fluid transformed" />
               <img src="assets/img/simple-3.jpg" class="card-img-top img-fluid transform" />
